EVIL_FLOWERS_USER_ACQUISITION_MODE 🥦
